{
  "version": 4,
  "terraform_version": "1.12.3",
  "serial": 4,
  "lineage": "e6b051b9-2236-6291-9a47-f4f8d41be677",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:vpc/vpc-0efbfa29718e9c99c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0981b1861dd7213e0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0bd1baee924226f46",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efbfa29718e9c99c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015a4f90667961302",
            "owner_id": "417521971870",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_controller",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-084b17e3cb2d02a6c",
            "arn": "arn:aws:ec2:us-east-1:417521971870:instance/i-0c3d15c041e9a7411",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ansible-controller-profile",
            "id": "i-0c3d15c041e9a7411",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aadvik",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0379956ad63058499"
              }
            ],
            "primary_network_interface_id": "eni-0379956ad63058499",
            "private_dns": "ip-172-31-94-118.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.94.118",
            "public_dns": "ec2-18-206-252-6.compute-1.amazonaws.com",
            "public_ip": "18.206.252.6",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d30997354da80dcb",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "ansible-controller-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014222327482c67e7",
            "tags": {
              "Name": "ansible-controller"
            },
            "tags_all": {
              "Name": "ansible-controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0297939941d31b3f0"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ansible_controller_profile",
            "aws_iam_role.ansible_controller_role",
            "aws_security_group.ansible_controller_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_iam_policy_document.ec2_assume_role",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "i-0c3d15c041e9a7411",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx_server",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-084b17e3cb2d02a6c",
            "arn": "arn:aws:ec2:us-east-1:417521971870:instance/i-0b88f6ae1a2fa4b6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b88f6ae1a2fa4b6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aadvik",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04c3b0ae0aff6a316"
              }
            ],
            "primary_network_interface_id": "eni-04c3b0ae0aff6a316",
            "private_dns": "ip-172-31-89-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.89.80",
            "public_dns": "ec2-44-211-43-190.compute-1.amazonaws.com",
            "public_ip": "44.211.43.190",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-014f0c4c42353b943",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014222327482c67e7",
            "tags": {
              "Name": "nginx-server-1",
              "Role": "webserver"
            },
            "tags_all": {
              "Name": "nginx-server-1",
              "Role": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c88c0363adfa8f2"
            ]
          },
          "dependencies": [
            "aws_security_group.ansible_controller_sg",
            "aws_security_group.nginx_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "i-0b88f6ae1a2fa4b6a",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-084b17e3cb2d02a6c",
            "arn": "arn:aws:ec2:us-east-1:417521971870:instance/i-02805acc5159b3a77",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02805acc5159b3a77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aadvik",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04d0f3a067626d64c"
              }
            ],
            "primary_network_interface_id": "eni-04d0f3a067626d64c",
            "private_dns": "ip-172-31-32-165.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.165",
            "public_dns": "ec2-54-211-175-121.compute-1.amazonaws.com",
            "public_ip": "54.211.175.121",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0810b989a5ca5d41b",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "nginx-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05d35c28d26a6529e",
            "tags": {
              "Name": "nginx-server-2",
              "Role": "webserver"
            },
            "tags_all": {
              "Name": "nginx-server-2",
              "Role": "webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c88c0363adfa8f2"
            ]
          },
          "dependencies": [
            "aws_security_group.ansible_controller_sg",
            "aws_security_group.nginx_sg",
            "data.aws_ami.amazon_linux",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "i-02805acc5159b3a77",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_controller_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:security-group/sg-0297939941d31b3f0",
            "description": "Allow SSH from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0297939941d31b3f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ansible-controller-sg",
            "name_prefix": "",
            "owner_id": "417521971870",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ansible-controller-sg"
            },
            "tags_all": {
              "Name": "ansible-controller-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbfa29718e9c99c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "sg-0297939941d31b3f0",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.opentofu.org/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:417521971870:security-group/sg-02c88c0363adfa8f2",
            "description": "Allow SSH from controller and HTTP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c88c0363adfa8f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from Ansible controller",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0297939941d31b3f0"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "417521971870",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efbfa29718e9c99c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ansible_controller_sg",
            "data.aws_vpc.default"
          ],
          "identity": {
            "account_id": "417521971870",
            "id": "sg-02c88c0363adfa8f2",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}